Add plugin verification